<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_default"
    android:paddingVertical="@dimen/margin_2x">

    <TextView
        android:id="@+id/tv_add_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/add_name"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:autofillHints="name"
        android:maxLength="20"
        android:hint="@string/name_sample"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_save_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?selectableItemBackground"/>

</LinearLayout>